--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.3",
+    "@aws-amplify/ui-react-liveness": "^3.0.11",
+    "@aws-sdk/client-rekognition": "^3.511.0",
+    "aws-amplify": "^6.0.16",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
