--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,7 +16,7 @@
     }
   },
   "auth": {
-    "amplifyuidemo526ecf3f": {
+    "amplifyuidemo0fa3c171": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
